A5 wrap up and fixes

--- a/assignment-5/css/style.css
+++ b/assignment-5/css/style.css
@@ -27,5 +27,5 @@ p {
   border-style: solid;
   border-width: 1px;
   border-color: powderblue;
-  background: back;
+  opacity: 0.55;
 }
